--- a/.github/workflows/github-page-deploy.yaml
+++ b/.github/workflows/github-page-deploy.yaml
@@ -6,6 +6,11 @@ on:
       - main
 
 jobs:
-  build-and-publish:
+  publish:
+    runs-on: ubuntu-latest
     steps:
-      - uses: ./.github/actions/build-and-publish
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Build
+        uses: ./.github/actions/build
