--- a/.github/workflows/github-page-deploy.yaml
+++ b/.github/workflows/github-page-deploy.yaml
@@ -7,6 +7,6 @@ on:
 
 jobs:
   build-and-publish:
+    runs-on: ubuntu-latest
     steps:
-      - runs-on: ubuntu-latest
       - uses: ./.github/actions/build-and-publish
