--- a/.github/workflows/github-page-deploy.yaml
+++ b/.github/workflows/github-page-deploy.yaml
@@ -9,4 +9,5 @@ jobs:
   build-and-publish:
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
       - uses: ./.github/actions/build-and-publish
