--- a/.github/workflows/github-page-deploy.yaml
+++ b/.github/workflows/github-page-deploy.yaml
@@ -10,7 +10,6 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-        run: |
-        git config --global user.email "action@github.com"
-        git config --global usermname "Github Action"
+      - run: git config --global user.email "action@github.com"
+      - run: git config --global usermname "Github Action"
       - uses: ./.github/actions/build-and-publish
