--- a/.github/workflows/github-page-deploy.yaml
+++ b/.github/workflows/github-page-deploy.yaml
@@ -6,10 +6,13 @@ on:
       - main
 
 jobs:
-  build-and-publish:
+  publish:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
-      - run: git config --global user.email "action@github.com"
-      - run: git config --global user.name "Github Action"
-      - uses: ./.github/actions/build-and-publish
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: build # The folder the action should deploy.
