--- a/.github/workflows/github-page-deploy.yaml
+++ b/.github/workflows/github-page-deploy.yaml
@@ -13,7 +13,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Build
-        uses: ./.github/actions/build-and-publish
+        uses: ./.github/actions/build
 
       - name: Deploy
         uses: JamesIves/github-pages-deploy-action@v4
