--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     ]
   },
   "devDependencies": {
+    "@types/styled-components": "^5.1.25",
     "eslint": "^8.19.0",
     "gh-pages": "^4.0.0",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "styled-components": "^5.3.5"
   }
 }
