--- a/.github/workflows/github-page-deploy.yaml
+++ b/.github/workflows/github-page-deploy.yaml
@@ -14,3 +14,8 @@ jobs:
 
       - name: Build
         uses: ./.github/actions/build
+
+      - name: Deploy
+        uses: JamesIves/github-pages-deploy-action@v4
+        with:
+          folder: build # The folder the action should deploy.
